# docs/swagger.json
@@ -170,14 +170,14 @@
                     {
                         "type": "string",
                         "description": "群组ID",
-                        "name": "g_id",
+                        "name": "gid",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "boolean",
                         "description": "是否获取群组成员",
-                        "name": "with_member",
+                        "name": "with_members",
                         "in": "query"
                     }
                 ],
@@ -310,13 +310,6 @@
                         "description": "token",
                         "name": "Authorization",
                         "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "用户ID",
-                        "name": "uid",
-                        "in": "query",
                         "required": true
                     },
                     {
@@ -1213,6 +1206,7 @@
                     "type": "string"
                 },
                 "members_uid": {
+                    "description": "todo: limit to small number",
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -1353,9 +1347,6 @@
             "properties": {
                 "gid": {
                     "type": "string"
-                },
-                "group": {
-                    "$ref": "#/definitions/v1.Group"
                 },
                 "id": {
                     "description": "use as session id",
